angular/src/styles.css
/* ... */
.gf-py-10 { padding-top: var(--gf-10); padding-bottom: var(--gf-10); }
.gf-py-12 { padding-top: var(--gf-12); padding-bottom: var(--gf-12); }
.gf-py-16 { padding-top: var(--gf-16); padding-bottom: var(--gf-16); }
.gf-py-20 { padding-top: var(--gf-20); padding-bottom: var(--gf-20); }
.gf-py-24 { padding-top: var(--gf-24); padding-bottom: var(--gf-24); }
.gf-py-32 { padding-top: var(--gf-32); padding-bottom: var(--gf-32); }

.gf-pl-0  { padding-left: 0; }
.gf-pl-4  { padding-left: var(--gf-4); }
.gf-pl-6  { padding-left: var(--gf-6); }
.gf-pl-8  { padding-left: var(--gf-8); }
.gf-pl-10 { padding-left: var(--gf-10); }
.gf-pl-12 { padding-left: var(--gf-12); }
.gf-pl-16 { padding-left: var(--gf-16); }
.gf-pl-20 { padding-left: var(--gf-20); }
.gf-pl-24 { padding-left: var(--gf-24); }
.gf-pl-32 { padding-left: var(--gf-32); }

.gf-pr-0  { padding-right: 0; }
.gf-pr-4  { padding-right: var(--gf-4); }
.gf-pr-6  { padding-right: var(--gf-6); }
.gf-pr-8  { padding-right: var(--gf-8); }
.gf-pr-10 { padding-right: var(--gf-10); }
.gf-pr-12 { padding-right: var(--gf-12); }
.gf-pr-16 { padding-right: var(--gf-16); }
.gf-pr-20 { padding-right: var(--gf-20); }
.gf-pr-24 { padding-right: var(--gf-24); }
.gf-pr-32 { padding-right: var(--gf-32); }

.gf-pt-0  { padding-top: 0; }
.gf-pt-4  { padding-top: var(--gf-4); }
.gf-pt-6  { padding-top: var(--gf-6); }
.gf-pt-8  { padding-top: var(--gf-8); }
.gf-pt-10 { padding-top: var(--gf-10); }
.gf-pt-12 { padding-top: var(--gf-12); }
.gf-pt-16 { padding-top: var(--gf-16); }
.gf-pt-20 { padding-top: var(--gf-20); }
.gf-pt-24 { padding-top: var(--gf-24); }
.gf-pt-32 { padding-top: var(--gf-32); }
.gf-pt-64 { padding-top: var(--gf-64); }

.gf-pb-0  { padding-bottom: 0; }
.gf-pb-4  { padding-bottom: var(--gf-4); }
.gf-pb-6  { padding-bottom: var(--gf-6); }
.gf-pb-8  { padding-bottom: var(--gf-8); }
.gf-pb-10 { padding-bottom: var(--gf-10); }
.gf-pb-12 { padding-bottom: var(--gf-12); }
.gf-pb-16 { padding-bottom: var(--gf-16); }
.gf-pb-20 { padding-bottom: var(--gf-20); }
.gf-pb-24 { padding-bottom: var(--gf-24); }
.gf-pb-32 { padding-bottom: var(--gf-32); }
.gf-pb-64 { padding-bottom: var(--gf-64); }
.gf-pb-96 { padding-bottom: var(--gf-96); }

/* Pointer events */
.gf-no-events { pointer-events: none !important; }
.gf-do-events { pointer-events: auto; }

/* Cursor */

.gf-generic-clickable-wrapper {
  cursor: pointer;
}

/*

  Media queries

*/

@media (max-width: 36rem) {
  .gf-background-map-fixed {
    background-image: none;
    background-color: var(--gf-dark-bg-dark);
  }
}

@media (max-width: 62rem) {
  /* Nothing to see here */
}

@media (prefers-color-scheme: light) {
  :root {
    --gf-dark-bg-dark: var(--gf-light-bg-light);
    --gf-dark-bg: var(--gf-light-bg);
    --gf-dark-bg-light: var(--gf-light-bg-dark);
    --gf-dark-bg-catch-pin: var(--gf-light-bg-catch-pin);
    --gf-dark-bg-info-pin: var(--gf-light-bg-info-pin);
    --gf-dark-bg-warning-pin: var(--gf-light-bg-warning-pin);
    --gf-dark-text: var(--gf-light-text);
    --gf-dark-text-muted: var(--gf-light-text-muted);
  }
}

/*
 * Deprecated below
 * Deprecated below
 * Deprecated below
 * Deprecated below
 * Deprecated below
 */

/* ========== */
/* 1. Headers */
/* ========== */

.main-text-heading {
  font-size: 48px;
}

.main-text-subheading {
  font-size: 24px;
}

/* ===================== */
/* 2. Classes para texto */
/* ===================== */

.font-main li > a,
.font-main {
  font-family: var(--gf-font-main);
}

.font-heading span,
.font-heading li > a,
.font-heading {
  font-family: var(--gf-font-heading);
}

/*
 * 2.1. Cores de fundo
*/

.dark-bg-dark {
  background-color: var(--gf-dark-bg-dark);
}
.dark-bg {
  background-color: var(--gf-dark-bg);
}
.dark-bg-light {
  background-color: var(--gf-dark-bg-light);
}

/*
 * 2.2. Cores de texto
*/

.dark-text {
  color: var(--gf-dark-text);
}
.dark-text-muted {
  color: var(--gf-dark-text-muted);
}

/*
 * 2.3. Intensidade do texto (negrito)
*/

.text-slim {
  font-weight: 350;
}
.text-normal {
  font-weight: normal;
}
.text-medium {
  font-weight: 500;
}
.text-bold {
  font-weight: 700;
}

/* Deprecated - Use "gf-text-logo" instead */
.text-gofish {
  font-weight: 900;
  font-size: 28px;
}

/* ===========/
 /* 3. Ícones */
/* ========= */

/*
 * 3.1. Ícone Base
*/

.icon,
[class^="icon-"] {
  /*
  * A imagem do ícone é definida com a classe do (3.2.)
  *
  * Definido no <.icon-*>
  */
  background-image: var(--icon-url);
  background-repeat: no-repeat;
  background-position: center;

  /*
  * O tamanho do ícone é definido com a classe do (3.3.)
  *
  * Definido no <.icon-size-*>
  */
  --size: 48px;
  width: var(--size);
  height: var(--size);

  /* bg-size pode ser definido à parte se for necessário */
  background-size: var(--size) var(--size);

  /*
  * A cor do ícone é definido na classe do (3.4)
  */

  filter: var(--filter);
}

/*
 * 3.2. Imagens de ícones
*/

.icon-guitar {
  --icon-url: url("/assets/vectors/guitar.svg");
}
.icon-map {
  --icon-url: url("/assets/vectors/map.svg");
}
.icon-hook {
  --icon-url: url("/assets/vectors/hook.svg");
}
.icon-clear {
  --icon-url: url("/assets/vectors/clear.svg");
}
.icon-fish {
  --icon-url: url("/assets/vectors/fish.svg");
}
.icon-star {
  --icon-url: url("/assets/vectors/star.svg");
}
.icon-halfstar {
  --icon-url: url("/assets/vectors/star-half.svg");
}
.icon-check {
  --icon-url: url("/assets/vectors/check.svg");
}
.icon-cross {
  --icon-url: url("/assets/vectors/x.svg");
}
.icon-close {
  --icon-url: url("/assets/vectors/close.svg");
}
.icon-gofish {
  --icon-url: url("/assets/images/logo-white-256.png");
}
.icon-search {
  --icon-url: url("/assets/vectors/search.svg");
}
.icon-user {
  --icon-url: url("/assets/vectors/user.svg");
}
.icon-shielduser {
  --icon-url: url("/assets/vectors/shield-user.svg");
}
.icon-atsign {
  --icon-url: url("/assets/vectors/at-sign.svg");
}
.icon-facebook {
  --icon-url: url("/assets/vectors/facebook.svg");
}
/* ... */

